Add other links

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -27,8 +27,8 @@
       {% endif %}
     {% endfor %}
 
-    <a class="sidebar-nav-item" href="{{ site.github.repo }}/archive/v{{ site.version }}.zip">Download</a>
-    <a class="sidebar-nav-item" href="{{ site.github.repo }}">GitHub project</a>
+    <a class="sidebar-nav-item" href="https://wiki.pixelbar.nl/index.php/Main_Page">Wiki</a>
+    <a class="sidebar-nav-item" href="https://pixelbar.nl/workshops/">Workshops</a>
   </nav>
 
   <div class="sidebar-item">
