Update first article

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -7,7 +7,6 @@
   <div class="sidebar-item">
     <img id="logo" src="/public/logo.png">
     <p>{{ site.description }}</p>
-    <span>Currently <span id="status"></span></span>
   </div>
 
   <nav class="sidebar-nav">
@@ -29,6 +28,7 @@
 
     <a class="sidebar-nav-item" href="https://wiki.pixelbar.nl/index.php/Main_Page">Wiki</a>
     <a class="sidebar-nav-item" href="https://pixelbar.nl/workshops/">Workshops</a>
+    <a class="sidebar-nav-item" href="https://github.com/pixelbar">Github</a>
   </nav>
 
   <div class="sidebar-item">
