--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,7 +14,8 @@
         <div class="container">
           <h3 class="masthead-title">
             <a href="{{ site.baseurl }}/" title="Home">{{ site.title }}</a>
-            <small>{{ site.tagline }}</small>
+            <small><span>is currently <span id="status"></span></span></small>
+
           </h3>
         </div>
       </div>
