Add social icons to simplify navigation

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -27,9 +27,17 @@
     {% endfor %}
 
     <a class="sidebar-nav-item" href="https://wiki.pixelbar.nl/index.php/Main_Page">Wiki</a>
-    <a class="sidebar-nav-item" href="https://github.com/pixelbar">Github</a>
-    <a class="sidebar-nav-item" href="mailto:bestuur@pixelbar.nl">Contact</a>
   </nav>
+
+  <div class="sidebar-item">
+    <a class="ss-icon" href="https://github.com/pixelbar" target="_blank">&#xF671;</a>
+    <a class="ss-icon" href="https://facebook.com/pixelbar010" target="_blank">&#xF610;</a>
+    <a class="ss-icon" href="https://twitter.com/pixelbar010" target="_blank">&#xF611;</a>
+    <a class="ss-icon" href="https://reddit.com/r/pixelbar" target="_blank">&#xF616;</a>
+    <a class="ss-icon" href="https://www.linkedin.com/company/6612405" target="_blank">&#xF612;</a>
+    <a class="ss-icon" href="/atom.xml">&#xE310;</a>
+    <a class="ss-icon" href="mailto:bestuur@pixelbar.nl">&#x2709;</a>
+  </div>
 
   <div class="sidebar-item">
     <p>
