--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -44,5 +44,6 @@
         }, false);
       })(document);
     </script>
+    <script src="/public/fonts/ss-social/ss-social.js"></script>
   </body>
 </html>
