--- a/_includes/head.html
+++ b/_includes/head.html
@@ -3,6 +3,12 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta http-equiv="content-type" content="text/html; charset=utf-8">
 
+  <link rel="canonical" href="{{ site.url }}{{ page.url }}" />
+
+  <script type="text/javascript">
+    if (window.location.protocol != "https:") window.location.protocol = "https";
+  </script>
+
   <!-- Enable responsiveness on mobile devices-->
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
 
