--- a/_includes/head.html
+++ b/_includes/head.html
@@ -30,6 +30,7 @@
 
   <!-- Scripts -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/fetch/0.10.1/fetch.min.js"></script>
   <script src="{{ site.baseurl }}/public/scripts/main.js"></script>
 
 </head>
