--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -27,6 +27,7 @@
     {% endfor %}
 
     <a class="sidebar-nav-item" href="https://wiki.pixelbar.nl/index.php/Main_Page">Wiki</a>
+    <a class="sidebar-nav-item" href="https://pixelbar.herokuapp.com/">Join on Slack/IRC</a>
   </nav>
 
   <div class="sidebar-item">
