Added privacy-statement and changes registerform

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -41,7 +41,9 @@
 
   <div class="sidebar-item">
     <p>
-      &copy; {{ site.time | date: '%Y' }}. All rights reserved. <a href="/responsibledisclosure" style="opacity: 0.6; font-size: 11px">Responsible Disclosure</a>
+      &copy; {{ site.time | date: '%Y' }}. All rights reserved.
+      <a href="/responsibledisclosure" style="opacity: 0.6; font-size: 11px">Responsible Disclosure</a><br />
+      <a href="/privacystatement" style="opacity: 0.6; font-size: 11px">Privacy Statement</a>
     </p>
   </div>
 </div>
