--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,7 +14,7 @@
         <div class="container">
           <h3 class="masthead-title">
             <a href="{{ site.baseurl }}/" title="Home">{{ site.title }}</a>
-            <small><span>is currently <span id="status"></span></span></small>
+            <small><span>is <span id="status"></span> right now</span> <a href="{{ site.baseurl }}/contact#spacestate" class="spacestate-explanation" aria-label="What is the spacestate and what does open/closed mean">What is this?</a></small>
           </h3>
         </div>
       </div>
