--- a/_includes/head.html
+++ b/_includes/head.html
@@ -2,7 +2,16 @@
   <link href="http://gmpg.org/xfn/11" rel="profile">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta http-equiv="content-type" content="text/html; charset=utf-8">
-  <meta http-equiv="Content-Security-Policy" content="default-src 'self'; connect-src 'self' https://*.pixelbar.nl https://space-ubg50.video-dns.com; font-src 'self' https://fonts.gstatic.com; frame-src 'self' https://*.pixelbar.nl https://giphy.com; img-src 'self' data: https://www.google-analytics.com https://space-ubg50.video-dns.com; script-src 'self' 'unsafe-eval' 'unsafe-inline' https://www.google-analytics.com https://ajax.googleapis.com https://cdnjs.cloudflare.com https://cdn.video-dns.com; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; frame-ancestors 'self'; block-all-mixed-content;" />
+  <meta http-equiv="Content-Security-Policy" content="
+  default-src 'self';
+  connect-src 'self' https://*.pixelbar.nl https://space-ubg50.video-dns.com;
+  font-src 'self' https://fonts.gstatic.com;
+  frame-src 'self' https://*.pixelbar.nl https://giphy.com;
+  img-src 'self' data: https://www.google-analytics.com https://space-ubg50.video-dns.com;
+  script-src 'self' 'unsafe-eval' 'unsafe-inline' https://www.google-analytics.com https://ajax.googleapis.com https://cdnjs.cloudflare.com https://cdn.video-dns.com;
+  style-src 'self' 'unsafe-inline' https://fonts.googleapis.com;
+  block-all-mixed-content;
+  "/>
 
   <!-- Enable responsiveness on mobile devices-->
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
