Make logo clickable

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -5,7 +5,9 @@
 <!-- Toggleable sidebar -->
 <div class="sidebar" id="sidebar">
   <div class="sidebar-item">
-    <img id="logo" src="/public/logo.png">
+    <a href="{{ site.url }}/" class="sidebar-logo">
+      <img id="logo" src="/public/logo.png" aria-label="Logo of Hackerspace Pixelbar" alt="Logo of Hackerspace Pixelbar" />
+    </a>
     <p>{{ site.description }}</p>
   </div>
 
